--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,10 @@
 .ps_r {
     position: relative;
 }
-
+.btn:focus {
+    outline: 0;
+    box-shadow: 0 0 0 .25rem rgba(13, 110, 253, 0);
+}
 .ps_a {
     position: absolute;
 }
@@ -125,6 +128,30 @@ $black: #000000;
 }
 
 
+.user_details{
+    padding: .7rem .75rem;
+    transition: all .3s linear;
+    button{
+        border: 1px solid lighten($black, 50%);
+    }
+
+    .dropdown-menu{
+        display: block!important;
+        z-index: -1;
+        transform: translate3d(12px, 16px, 0px)!important;
+        opacity: 0;
+
+    }
+
+    .dropdown-menu.show{
+        opacity: 1;
+        z-index: 1;
+        transition: all .3s linear;
+        transform: translate3d(12px, 59px, 0px)!important;
+
+    }
+}
+
 .search_sect {
     input {
         padding: .5rem 2.5rem .5rem 1.5rem;
@@ -159,18 +186,15 @@ $black: #000000;
 
 .nav_dropdown {
     top: 100%;
-    // left: 0;
     right: 0;
     min-width: 10rem;
     background-color: lighten($black, 80%);
-    // display: none;
-    z-index: -1;
-    transform: translateY(-100%);
+    transform: translateY(-2rem);
     display: block;
     opacity: 0;
-    visibility: hidden;
-    transition: all .5s;
+    transition: all .2s linear;
     padding: .5rem 0;
+    z-index: -1;
     li{
         padding: .5rem 1rem;
     }
@@ -180,18 +204,16 @@ $black: #000000;
 
 .dropdown_togler {
     opacity: 1;
-    visibility: visible;
+    z-index: 1;
     transform: translateY(0);
 }
 
 
 
 .users_info_togler {
-    // display: block;
     opacity: 1;
     visibility: visible;
     transform: translateY(0);
-    // transition: all .3s linear!important;
 }
 
 .cart_strip{
@@ -199,7 +221,6 @@ $black: #000000;
     a{
         color: $black;
         text-transform: capitalize;
-        z-index: -10;
     }
 }
 
