--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,13 @@
   width: calc(1.5rem + 2vw);
 }
 
+header {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+
 .nav_top {
   display: flex;
   justify-content: space-between;
@@ -192,6 +199,13 @@
 .cart_strip a {
   color: #000000;
   text-transform: capitalize;
+}
+
+.hero_sect img {
+  width: 100%;
+  height: 90vh;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 @media (max-width: 576px) {
