--- a/css/main.scss
+++ b/css/main.scss
@@ -60,6 +60,13 @@ $black: #000000;
 }
 
 
+header{
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
+}
+
 .nav_top {
     display: flex;
     justify-content: space-between;
@@ -221,6 +228,14 @@ $black: #000000;
     a{
         color: $black;
         text-transform: capitalize;
+    }
+}
+
+.hero_sect{
+    img{
+        width: 100%;
+        height: 90vh;
+        object-fit: cover;
     }
 }
 
