--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,14 @@
   display: flex;
 }
 
+.text_transform_upper {
+  text-transform: uppercase;
+}
+
+.transition_class {
+  transition: all 0.5s linear;
+}
+
 .gap-1 {
   gap: 1rem;
 }
@@ -55,7 +63,7 @@
 }
 
 .site_logo {
-  width: calc(1.5rem + 2vw);
+  height: calc(1.5rem + 2vw);
 }
 
 header {
@@ -208,15 +216,80 @@ header {
      object-fit: cover;
 }
 
+.search_section {
+  gap: 2rem;
+}
+
+.search_panel {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.search_icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 2.5rem;
+  height: 2.6rem;
+  line-height: 2.6;
+  text-align: center;
+  background-color: #eaeaea;
+  display: inline-block;
+  z-index: 10;
+}
+
+.cross_icon {
+  position: absolute;
+  top: 50%;
+  right: -1.5rem;
+  transform: translateY(-50%);
+  z-index: 1;
+  width: 2rem;
+  height: 2rem;
+  display: inline-block;
+  text-align: center;
+  line-height: 2rem;
+  font-size: 1.5rem;
+  color: gray;
+}
+
+.search_bar {
+  width: 0.8rem;
+  outline: 1px solid transparent;
+  padding: 0.5rem 1rem 0.5rem 2.7rem;
+  border: 0;
+}
+
+.search_panel.width_toggle .search_bar {
+  width: 25rem !important;
+  outline-color: #eaeaea;
+}
+
+.search_panel .cross_icon {
+  opacity: 0;
+  transform: translate(0, -50%);
+}
+
+.search_panel.width_toggle .cross_icon {
+  opacity: 1 !important;
+  animation: cross_btn-anim 0.3s linear;
+  transform: translate(100%, -50%) rotate(180deg);
+  pointer-events: auto;
+  opacity: 1;
+}
+
 @media (max-width: 576px) {
   .d_sm_none {
     display: none;
   }
-  .nav_top {
-    flex-direction: column;
-    justify-content: center;
-  }
   .site_logo {
-    padding-top: 1rem;
+    width: calc(1rem + 5vw);
+  }
+  .search_section {
+    flex-direction: column;
+  }
+  .search_section .search_panel.width_toggle .search_bar {
+    width: 19rem !important;
+    outline-color: #eaeaea;
   }
 }/*# sourceMappingURL=main.css.map */
