--- a/css/main.scss
+++ b/css/main.scss
@@ -1,33 +1,44 @@
 .ps_r {
     position: relative;
 }
+
 .btn:focus {
     outline: 0;
     box-shadow: 0 0 0 .25rem rgba(13, 110, 253, 0);
 }
+
 .ps_a {
     position: absolute;
 }
 
-.d_flex{
+.d_flex {
     display: flex;
 }
 
-.gap-1{
+.text_transform_upper{
+    text-transform: uppercase;
+}
+
+.transition_class {
+    transition: all .5s linear;
+}
+
+.gap-1 {
     gap: 1rem;
 }
 
-.justify_end{
+.justify_end {
     justify-content: end;
 }
 
-.sect_space{
+.sect_space {
     padding: 1rem 0;
 }
 
-.bg_transparent{
+.bg_transparent {
     background-color: transparent;
 }
+
 .list_style_none {
     list-style: none;
 }
@@ -56,11 +67,11 @@ $black: #000000;
 }
 
 .site_logo {
-    width: calc(1.5rem + 2vw);
+    height: calc(1.5rem + 2vw);
 }
 
 
-header{
+header {
     position: fixed;
     width: 100%;
     left: 0;
@@ -86,14 +97,15 @@ header{
     gap: 1rem;
     justify-content: space-between !important;
     background-color: transparent;
+
     i {
         font-size: 1.2rem;
         padding: 0 .5rem;
     }
 
-    .user_info-btn{
+    .user_info-btn {
 
-        &:after{
+        &:after {
             position: absolute;
             content: "";
             width: 100%;
@@ -108,14 +120,15 @@ header{
 
     }
 
-    .user_info_dropdown{
+    .user_info_dropdown {
         padding: .5rem 0;
-        li{
+
+        li {
             padding: .5rem 1rem;
         }
     }
-    
-    
+
+
 
 }
 
@@ -135,26 +148,27 @@ header{
 }
 
 
-.user_details{
+.user_details {
     padding: .7rem .75rem;
     transition: all .3s linear;
-    button{
+
+    button {
         border: 1px solid lighten($black, 50%);
     }
 
-    .dropdown-menu{
-        display: block!important;
+    .dropdown-menu {
+        display: block !important;
         z-index: -1;
-        transform: translate3d(12px, 16px, 0px)!important;
+        transform: translate3d(12px, 16px, 0px) !important;
         opacity: 0;
 
     }
 
-    .dropdown-menu.show{
+    .dropdown-menu.show {
         opacity: 1;
         z-index: 1;
         transition: all .3s linear;
-        transform: translate3d(12px, 59px, 0px)!important;
+        transform: translate3d(12px, 59px, 0px) !important;
 
     }
 }
@@ -202,7 +216,8 @@ header{
     transition: all .2s linear;
     padding: .5rem 0;
     z-index: -1;
-    li{
+
+    li {
         padding: .5rem 1rem;
     }
 }
@@ -223,33 +238,122 @@ header{
     transform: translateY(0);
 }
 
-.cart_strip{
-    
-    a{
+.cart_strip {
+
+    a {
         color: $black;
         text-transform: capitalize;
     }
 }
 
-.hero_sect{
-    img{
+.hero_sect {
+    img {
         width: 100%;
         height: 90vh;
         object-fit: cover;
     }
 }
 
-@media(max-width: 576px) {
 
-    .d_sm_none{
-        display: none;
-    }
-    .nav_top {
-        flex-direction: column;
-        justify-content: center;
-    }
+.search_section{
+    gap: 2rem;
+}
 
-    .site_logo{
-        padding-top: 1rem;
+.search_panel {
+    width: fit-content;
+}
+
+.search_icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 2.5rem;
+    height: 2.6rem;
+    line-height: 2.6;
+    text-align: center;
+    background-color: #eaeaea;
+    display: inline-block;
+    z-index: 10;
+}
+
+.cross_icon {
+    position: absolute;
+    top: 50%;
+    right: -1.5rem;
+    transform: translateY(-50%);
+    z-index: 1;
+    width: 2rem;
+    height: 2rem;
+    display: inline-block;
+    text-align: center;
+    line-height: 2rem;
+    font-size: 1.5rem;
+    color: lighten($color: black, $amount: 50%);
+
+}
+
+
+
+.search_bar {
+    width: .8rem;
+    outline: 1px solid transparent;
+    padding: .5rem 1rem .5rem 2.7rem;
+    border: 0;
+}
+
+
+
+.search_panel.width_toggle {
+    .search_bar {
+        width: 25rem !important;
+        outline-color: #eaeaea;
     }
 }
+
+
+
+.search_panel {
+    .cross_icon {
+        opacity: 0;
+        transform: translate(0, -50%);
+    }
+}
+
+.search_panel.width_toggle {
+    .cross_icon {
+        opacity: 1 !important;
+        animation: cross_btn-anim 0.3s linear;
+
+        transform: translate(100%, -50%) rotate(180deg);
+        pointer-events: auto;
+        opacity: 1;
+    }
+}
+
+
+
+@media(max-width: 576px) {
+
+    .d_sm_none {
+        display: none;
+    }
+
+
+    .site_logo {
+        width: calc(1rem + 5vw);
+    }
+
+    .search_section{
+        flex-direction: column;
+
+        .search_panel.width_toggle {
+            .search_bar {
+                width: 19rem !important;
+                outline-color: #eaeaea;
+            }
+        }
+    }
+
+    
+}
+
