--- a/css/main.scss
+++ b/css/main.scss
@@ -358,6 +358,7 @@ header {
 .search_panel.width_toggle {
     margin-right: 2.75rem;
     .search_bar {
+        padding: .5rem 1rem .5rem 3rem!important;
         width: 25rem !important;
         outline-color: #eaeaea;
     }
