--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,37 @@
+.site_wrapper {
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
+  justify-content: center;
+  gap: 20rem;
+  background-color: #eaeaea;
+}
+footer p {
+  max-width: 20rem;
+}
+
+.footer_img {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: calc(5rem + 10vw);
+  padding-top: 15%;
+  margin: 0;
+}
+.footer_img img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .ps_r {
   position: relative;
 }
@@ -5,6 +39,14 @@
 .btn:focus {
   outline: 0;
   box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0);
+}
+
+.t_align-r {
+  text-align: right;
+}
+
+.t_align-l {
+  text-align: left;
 }
 
 .ps_a {
