--- a/css/_booking.scss
+++ b/css/_booking.scss
@@ -10,7 +10,7 @@
 footer{
     margin-top: auto;
     justify-content: center;
-    gap: 20rem;
+    gap: clamp(5rem + 4vw, 5rem + 10vw, 5rem + 14vw);
 
     background-color: #eaeaea;
 
@@ -19,23 +19,46 @@ footer{
     }
 }
 
+.footer_img {
 
-.footer_img{
     position: absolute;
     left: 50%;
     bottom: 0;
+    // width: 100%;
     transform: translateX(-50%);
-    width: calc(5rem + 10vw);
-    padding-top: 15%;
-    // background-color: #eaeaea;
     margin: 0;
-
-    img{
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        object-fit: cover;
-    }
+    width: clamp(5rem + 4vw, 5rem + 10vw, 5rem + 14vw);
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+/* Make the image responsive */
+.footer_img img {
+    max-width: 100%;
+    height: auto; /* Maintain the aspect ratio */
+    display: block;
+}
+
+
+
+
+// .footer_img {
+//     position: absolute;
+//     left: 50%;
+//     bottom: 0;
+//     transform: translateX(-50%);
+//     width: clamp(5rem + 4vw, 5rem + 10vw, 5rem + 14vw);
+//     // height: clamp(10rem, 15rem, 20rem);
+//     height: clamp(15vh, 18vh, 20vh);
+//     // padding-top: clamp(8%, 10%, 12%);
+//     // background-color: green;
+//     margin: 0;
+// }
+
+// .footer_img img {
+//     width: 100%;
+//     height: auto; /* Maintain aspect ratio */
+//     object-fit: cover;
+// }
