--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 footer {
   margin-top: auto;
   justify-content: center;
-  gap: 20rem;
+  gap: clamp(5rem + 4vw, 5rem + 10vw, 5rem + 14vw);
   background-color: #eaeaea;
 }
 footer p {
@@ -18,18 +18,19 @@ footer p {
   left: 50%;
   bottom: 0;
   transform: translateX(-50%);
-  width: calc(5rem + 10vw);
-  padding-top: 15%;
   margin: 0;
+  width: clamp(5rem + 4vw, 5rem + 10vw, 5rem + 14vw);
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+/* Make the image responsive */
 .footer_img img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  -o-object-fit: cover;
-     object-fit: cover;
+  max-width: 100%;
+  height: auto; /* Maintain the aspect ratio */
+  display: block;
 }
 
 .ps_r {
