--- a/css/_booking.scss
+++ b/css/_booking.scss
@@ -1,64 +1,86 @@
-
-
-.site_wrapper{
-    // display: flex;
+.site_wrapper {
     min-height: 100vh;
     flex-direction: column;
 }
 
 
-footer{
+footer {
+    overflow: hidden;
     margin-top: auto;
     justify-content: center;
-    gap: clamp(5rem + 4vw, 5rem + 10vw, 5rem + 14vw);
 
-    background-color: #eaeaea;
 
-    p{
+    .footer_wrapper {
+        align-items: end;
+    }
+
+    p {
         max-width: 20rem;
+        padding: .5rem 0;
     }
 }
 
+
 .footer_img {
 
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    // width: 100%;
-    transform: translateX(-50%);
-    margin: 0;
-    width: clamp(5rem + 4vw, 5rem + 10vw, 5rem + 14vw);
-    height: auto;
+    padding: 0 1rem;
+
+    width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+
+    img {
+
+        min-height: calc(5rem + 3vh);
+        max-height: calc(10rem + 3vh);
+        object-fit: cover;
+    }
+
 }
 
-/* Make the image responsive */
-.footer_img img {
-    max-width: 100%;
-    height: auto; /* Maintain the aspect ratio */
-    display: block;
+.t_align-r {
+
+    &:before {
+        content: '';
+        position: absolute;
+        width: 100vw;
+        height: 100%;
+        background-color: #eaeaea;
+        top: 0;
+        left: 0;
+        z-index: -1;
+    }
+
+    &:after {
+        content: '';
+        position: absolute;
+        width: 100vw;
+        height: 100%;
+        background-color: #eaeaea;
+        top: 0;
+        right: 0;
+        z-index: -1;
+    }
 }
 
 
 
 
-// .footer_img {
-//     position: absolute;
-//     left: 50%;
-//     bottom: 0;
-//     transform: translateX(-50%);
-//     width: clamp(5rem + 4vw, 5rem + 10vw, 5rem + 14vw);
-//     // height: clamp(10rem, 15rem, 20rem);
-//     height: clamp(15vh, 18vh, 20vh);
-//     // padding-top: clamp(8%, 10%, 12%);
-//     // background-color: green;
-//     margin: 0;
-// }
+@media(max-width: 576px){
+    footer{
 
-// .footer_img img {
-//     width: 100%;
-//     height: auto; /* Maintain aspect ratio */
-//     object-fit: cover;
-// }
+        background-color: #eaeaea;
+        padding: 1rem 0;
+        .footer_wrapper{
+            flex-direction: column;
+            width: 100%;
+        }
+        p{
+            max-width: 100%!important;
+            text-align: justify!important;
+            padding: 0!important;
+            margin: 0;
+        }
+    }
+}
+
