--- a/css/main.css
+++ b/css/main.css
@@ -4,35 +4,68 @@
 }
 
 footer {
+  overflow: hidden;
   margin-top: auto;
   justify-content: center;
-  gap: clamp(5rem + 4vw, 5rem + 10vw, 5rem + 14vw);
-  background-color: #eaeaea;
+}
+footer .footer_wrapper {
+  align-items: end;
 }
 footer p {
   max-width: 20rem;
+  padding: 0.5rem 0;
 }
 
 .footer_img {
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  transform: translateX(-50%);
-  margin: 0;
-  width: clamp(5rem + 4vw, 5rem + 10vw, 5rem + 14vw);
-  height: auto;
+  padding: 0 1rem;
+  width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
-
-/* Make the image responsive */
 .footer_img img {
-  max-width: 100%;
-  height: auto; /* Maintain the aspect ratio */
-  display: block;
+  min-height: calc(5rem + 3vh);
+  max-height: calc(10rem + 3vh);
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
+.t_align-r:before {
+  content: "";
+  position: absolute;
+  width: 100vw;
+  height: 100%;
+  background-color: #eaeaea;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.t_align-r:after {
+  content: "";
+  position: absolute;
+  width: 100vw;
+  height: 100%;
+  background-color: #eaeaea;
+  top: 0;
+  right: 0;
+  z-index: -1;
+}
+
+@media (max-width: 576px) {
+  footer {
+    background-color: #eaeaea;
+    padding: 1rem 0;
+  }
+  footer .footer_wrapper {
+    flex-direction: column;
+    width: 100%;
+  }
+  footer p {
+    max-width: 100% !important;
+    text-align: justify !important;
+    padding: 0 !important;
+    margin: 0;
+  }
+}
 .ps_r {
   position: relative;
 }
@@ -40,6 +73,10 @@ footer p {
 .btn:focus {
   outline: 0;
   box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0);
+}
+
+.d_sm_none {
+  display: block;
 }
 
 .t_align-r {
