--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,12 @@ $black: #000000;
     box-shadow: 0 0 0 .25rem rgba(13, 110, 253, 0);
 }
 
+//display none
+
+.d_sm_none{
+    display: block;
+}
+
 //text align
 
 .t_align-r{
